idea/testData/checker/RecursiveTypeInference.jet
//package a {
    val afoo = abar()

    fun bar() = <error descr="[TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM] Type checking has run into a recursive problem">foo</error>
}

//package b {
    fun bfoo() = bbar()

    fun bar() = <error descr="[TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM] Type checking has run into a recursive problem">foo()</error>
}

//package c {
    fun cbazz() = cbar()

    fun foo() = <error descr="[TYPECHECKER_HAS_RUN_INTO_RECURSIVE_PROBLEM] Type checking has run into a recursive problem">bazz()</error>

    fun cbar() = cfoo()
//}

//package ok {
//
//    package a {
        val okafoo = okabar()

        fun okabar() : Int = okafoo
//    }
//
//    package b {
        fun okbfoo() : Int = okbbar()

        fun okbbar() = okbfoo()
//    }
//
//    package c {
        fun okcbazz() = okcbar()

        fun okcfoo() : Int = okcbazz()

        fun okcbar() = okcfoo()
//    }
//}
